# rtm-events

./: .gitignore  AGENTS.md  README.md  application.py  domain.py  projector.py  pyproject.toml  scenario_generator.py  streamlit_app.py  test_graph_model.py
JSON Schemas/: Schema_Explained.md  policy_container.json
JSON Schemas/Assets/: motorcycle.json  vehicle.json
JSON Schemas/Event/: event_payload.json
JSON Schemas/Party/: person.json
JSON Schemas/Policy/: policy_detail.json
JSON Schemas/Portfolio/: portfolio.json
JSON Schemas/Relationships/: party_relationship.json  relationships.json  temporal_relationship.json
docs/: architecture.md  current-state-and-gaps.md
tests/: test_policy_lifecycle.py  test_scenario_generator.py  test_scenarios.py
